--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,35 +1,27 @@
+[build-system]
+build-backend = "hatchling.build"
+requires = [ "hatchling" ]
+
 [project]
-name = "password_manager"
+name = "password-manager"
 version = "1.0.0"
 requires-python = ">=3.12,<3.14"
 classifiers = [
   "Programming Language :: Python",
   "Programming Language :: Python :: 3 :: Only",
+  "Programming Language :: Python :: 3.12",
   "Programming Language :: Python :: 3.13",
 ]
 dependencies = [
-  "cryptography==43.0.3"
+  "cryptography==43.0.3",
 ]
-
-[build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
-
-[project.scripts]
-start = "password_manager:main"
-
-[tool.uv]
-dev-dependencies = [
-  "mypy==1.13",
-  "pre-commit==4.0.1",
-  "ruff==0.7.2"
-]
+scripts.start = "password_manager:main"
 
 [tool.ruff]
 target-version = "py313"
 line-length = 120
 indent-width = 4
-lint.select = ["ALL"]
+lint.select = [ "ALL" ]
 lint.ignore = [
   "D",      # FIXME: docs
   "DTZ003", # Allow naive datetimes
@@ -43,3 +35,10 @@ lint.ignore = [
 strict = true
 disallow_any_unimported = true
 no_implicit_optional = true
+
+[tool.uv]
+dev-dependencies = [
+  "mypy==1.13",
+  "pre-commit==4.0.1",
+  "ruff==0.7.2",
+]
