--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,8 +14,10 @@ classifiers = [
 ]
 dependencies = [
   "cryptography==44",
+  "sqlmodel==0.0.22",
 ]
 scripts.start = "password_manager:main"
+scripts.manage = "password_manager:manage"
 
 [tool.ruff]
 target-version = "py313"
