--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,5 +1,5 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["github>dkshs/renovate-config"],
+  "extends": ["github>ncontiero/renovate-config"],
   "dependencyDashboard": true
 }
